# apocryphon

./: CMakeLists.txt
doc/: syntax.md
doc/src/: parse.c
src/: CMakeLists.txt  ap.m.cpp
test/: CMakeLists.txt  ap.t.cpp
